plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    if (JavaVersion.current() < JavaVersion.VERSION_17) {
        toolchain.languageVersion = JavaLanguageVersion.of(17)
    }
}

subprojects {
    apply plugin: 'java'

    tasks.register('copyPluginYml', Copy) {
        from "$projectDir/src/main/resources/plugin.yml"
        into "$buildDir/resources/main"
    }

    jar {
        from rootProject.sourceSets.main.output
    }

    def targetJavaVersion = project.name == "TownsAndNations-bluemap" ? 21 : 17
    java {
        def javaVersion = JavaVersion.toVersion(targetJavaVersion)
        sourceCompatibility = targetJavaVersion
        targetCompatibility = targetJavaVersion
        if (JavaVersion.current() < javaVersion) {
            toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
            options.release.set(targetJavaVersion)
        }
    }

    processResources {
        processResources {
            filesMatching('plugin.yml') {
                expand(version: rootProject.version) // Utilisation correcte
            }
        }
    }
}

allprojects {
    group = 'org.leralix'
    version = '0.13.0'

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            name = "spigotmc-repo"
            url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
        }
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/groups/public/"
        }


        maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
        maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    }

    dependencies {
        compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
        compileOnly "io.github.leralix:sphere-lib:0.5.1"
        compileOnly "io.github.leralix:tan-api:0.5.3"

        testImplementation 'io.github.leralix:tan-api:0.5.3'
        testImplementation 'io.github.leralix:sphere-lib:0.5.2'
        testImplementation 'org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
        testImplementation 'org.mockito:mockito-core:5.7.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
    }

    test {
        useJUnitPlatform()
    }
}